tray header alignment fix

--- a/app/less/common.less
+++ b/app/less/common.less
@@ -220,7 +220,7 @@ body > .ng-scope {overflow-x: hidden;}
 
 #trayTitle {
 	display: inline-block;
-	margin: 8px 10px 0 0;
+	margin: 8px 5px 0 0;
 }
 
 #trayValue {
